# Rocket_MVC

./: .env  .gitignore  Cargo.toml  LICENSE  README.md
migrations/2017-11-21-120157_create_recipe/: down.sql  up.sql
src/: controller.rs  controllers.rs  database.rs  forms.rs  lib.rs  main.rs  models.rs  recipe.rs  recipes.rs  recipes_controller.rs  routes.rs  schema.rs  tests.rs
src_old/: controller.rs  database.rs  models.rs
templates/: index.html.hbs  recipe.html.hbs
templates/layouts/: main.html.hbs
templates/pages/: home.html.hbs
templates/recipes/: edit.html.hbs  index.html.hbs  new.html.hbs  show.html.hbs
tests/: controllers_tests.rs  tests.rs
