[package]
name = "rocket_mvc"
version = "0.1.0"
authors = ["Alexandre Rousseau <contact@rousseau-alexandre.de>"]

[dependencies]
rocket = "0.3.3"
rocket_codegen = "0.3.3"

serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"

diesel = { version = "0.16", features = ["sqlite"] }
diesel_codegen = { version = "0.16", features = ["sqlite"] }
dotenv = "0.9.0"

[dependencies.rocket_contrib]
default-features = false
features = ["handlebars_templates"]
version = "0.3.3"